# hl7-fhir-bridge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
bridge/: .dockerignore  Dockerfile  README.md  pyproject.toml
bridge/src/bridge/: __init__.py  ack.py  config.py  main.py  metrics.py  router.py  terminology.py
bridge/src/bridge/fhir_client/: __init__.py  client.py
bridge/src/bridge/mappers/: __init__.py  _common.py  _types.py  adt_a01.py  adt_a03.py  adt_a08.py  oru_r01.py
bridge/src/bridge/mllp/: __init__.py  protocol.py  server.py
bridge/src/bridge/parsers/: __init__.py  v2.py
bridge/src/bridge/scripts/: replay.py  seeder.py
bridge/src/bridge/store/: __init__.py  messages.py
bridge/src/bridge/validators/: __init__.py  us_core.py
bridge/tests/: conftest.py  test_smoke.py
bridge/tests/fixtures/: adt_a01_simple.expected.json  adt_a01_simple.hl7  adt_a03_simple.expected.json  adt_a03_simple.hl7  adt_a08_simple.expected.json  adt_a08_simple.hl7  oru_r01_simple.hl7
bridge/tests/integration/: test_end_to_end.py  test_http_api.py
bridge/tests/unit/: test_ack.py  test_adt_a01_mapper.py  test_adt_a03_mapper.py  test_adt_a08_mapper.py  test_fhir_client.py  test_fhir_client_oauth.py  test_message_store.py  test_metrics.py  test_mllp_protocol.py  test_oru_r01_mapper.py  test_us_core_validator.py  test_v2_parser.py
deploy/: .env.example  Caddyfile.example  README.md  bridge.service  deploy.sh  docker-compose.prod.yml  redeploy.service  redeploy.timer
docs/: architecture.md
fixtures/: README.md
viewer/: .eslintrc.cjs  .prettierrc.json  (+6 more)
(+26 files in other folders)
